<resources>
    <string name="app_name">PassThePass</string>
    <string name="tv_welcome">Welcome to PassThePass</string>
    <string name="et_email">Email</string>
    <string name="et_password">Password</string>
    <string name="button_login">Login</string>
    <string name="login_failed">Email/Password combination is incorrect</string>
    <string name="et_empty">Fields can\'t be empty</string>
    <string name="login_success">Welcome to Pass The Pass!</string>
    <string name="title_activity_ptphome">PTPHome</string>
    <string name="title_my_passwords">My passwords</string>
    <string name="title_shared_passwords">Shared passwords</string>
    <string name="title_my_account">My account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_create_password">Add new password</string>
    <string name="create_application_name">Application name</string>
    <string name="create_application_password">Application password</string>
    <string name="create_button_add">Add</string>
    <string name="popup_show_password">Show password</string>
    <string name="popup_edit">Edit</string>
    <string name="popup_delete">Delete</string>
    <string name="toast_delete">The password has been removed successfully</string>
    <string name="create_application_succes">Password added</string>
    <string name="create_application_user_email">User email</string>
    <string name="create_application_failed_user_not_found">User not found</string>
    <string name="create_application_failed_not_your_email">You cannot introduce your own email!</string>
    <string name="create_application_failed_required">You need to fill every field</string>
    <string name="button_logout">Logout</string>
    <string name="button_update">Update</string>
    <string name="update_password_success">Password updated successfully</string>
    <string name="text_update_password">Password modification</string>
    <string name="text_new_password">New password</string>
</resources>