<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="250dp"
            android:layout_height="70dp"
            android:layout_marginBottom="12sp"
            app:srcCompat="@drawable/sin_t_tulo_1" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="12sp"
            android:ems="10"
            android:hint="@string/et_email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColorHighlight="#000000"
            android:textColorLink="#000000" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="12sp"
            android:ems="10"
            android:hint="@string/et_password"
            android:inputType="textPassword"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="12sp"
            android:backgroundTint="#000000"
            android:onClick="onClick"
            android:text="@string/button_login" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>